--- a/views/website/viewProperty.ejs
+++ b/views/website/viewProperty.ejs
@@ -114,23 +114,31 @@
             }
 
         }
+        @media only screen and (max-width: 700px) {
+        .remove-logo {
+          visibility: hidden;
+  }
+  .my_search_field{
+    display: block;align-items: center; margin-left: auto;margin-right: auto;
+}
+}
     </style>
 </head>
 
 <body>
     <div class="page-wrapper">
-        <header class="header " >
-            <div class="site-navbar-wrap v1" >
-                <div class="container">
-                    <div class="site-navbar">
-                        <div class="row align-items-center">
+        <header class="header " style="background-color: aqua;">
+            <div class="site-navbar-wrap v1" style="background-color: rgba(248, 248, 248,0.9);" >
+                <div class="container"  >
+                    <div class="site-navbar" >
+                        <div class="row align-items-center" >
                             <div class="col-lg-2 col-md-5 col-sm-5 col-4 order-2 order-xl-1 order-lg-1 order-sm-2 order-md-2"
                                 id="logo">
                                 <a class="navbar-brand" href="/">
                                     <p style="display:inline-block"><img src="/assets/img/logo.png"
                                             style="width: 50px; height: 50px;margin-bottom: 10px;margin-right: 5px;"
                                             alt="logo" class="img-fluid">
-                                        <h3 class="remove-logo" style="color:white;padding-top: 15px; display: inline-block;">Zameen Lo</h3>
+                                        <h3 class="remove-logo" style="color:green;padding-top: 15px; display: inline-block;">Zameen Lo</h3>
                                     </p>
                                 </a>
                             </div>
@@ -185,8 +193,8 @@
                                     <ul class="user-btn v2">
                                         
                                     </ul>
-                                    <div class="add-list float-right ml-3">
-                                        <a class="btn v6" href="/login">Post Property <span>Free</span> </a>
+                                    <div class="add-list float-right ml-3" style="background-color: rgb(32, 170, 32);padding: 4px 10px;border-radius: 5px;">
+                                        <a class="btn v6"  href="/login" style="border: none;">Post Property <span style="color: black;background-color: white;">Free</span> </a>
                                     </div>
                                 </div>
                             </div>
