--- a/views/website/home.ejs
+++ b/views/website/home.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zameen Lo</title>
+    <title>Zamen Lo</title>
     <link href="assets/css-compress/7a81152952ef25f1ea636813d80a0405.css?v=1664524241" rel="stylesheet">
     <link type="image/png" rel="icon" href="assets/img/logo.png">
 </head>
@@ -18,12 +18,15 @@
     display: block;align-items: center; margin-left: auto;margin-right: auto;
 }
 }
+.site-navbar-wrap.v1 {
+                background: none;
+            }
 </style>
 
 <body>
     <div class="page-wrapper">
-        <header class="header " style="background-color: aqua;">
-            <div class="site-navbar-wrap v1" style="background-color: rgba(248, 248, 248,0.9);" >
+        <header class="header " >
+            <div class="site-navbar-wrap v1" style="background-color: rgb(248, 248, 248);" >
                 <div class="container"  >
                     <div class="site-navbar" >
                         <div class="row align-items-center" >
@@ -31,9 +34,9 @@
                                 id="logo">
                                 <a class="navbar-brand" href="/">
                                     <p style="display:inline-block"><img src="/assets/img/logo.png"
-                                            style="width: 50px; height: 50px;margin-bottom: 10px;margin-right: 5px;"
+                                            style="width:50px; height:auto;margin-bottom: 10px;margin-right: 5px;"
                                             alt="logo" class="img-fluid">
-                                        <h3 class="remove-logo" style="color:green;padding-top: 15px; display: inline-block;">Zameen Lo</h3>
+                                        <h3 class="remove-logo" style="color:green;padding-top: 15px; display: inline-block;">Zamen Lo</h3>
                                     </p>
                                 </a>
                             </div>
@@ -76,9 +79,9 @@
                                 id="mobile-right-nav">
                                 <ul class="user-btn v2">
                                    
-                                    <li>
-                                        <a class="btn v6" href="/login"  id="login-icon-btn">Post Property
-                                            <span>Free</span></a>
+                                    <li  style="background-color: rgb(32, 170, 32);padding: 4px 10px;border-radius: 5px;">
+                                        <a class="btn v6" href="/login"  id="login-icon-btn" style="border: none;">Post Property
+                                            <span style="color: black;background-color: white;">Free</span></a>
                                     </li>
                                 </ul>
                             </div>
@@ -98,17 +101,13 @@
                 </div>
             </div>
         </header>
-        <style>
-            .site-navbar-wrap.v1 {
-                background: none;
-            }
-        </style>
-        <div class="hero v1 section-padding" style="background-image: url(assets/1e23d7f5/header/hero_5.webp)">
+       
+        <div class="hero v1 section-padding" style="background-image: url(assets/1e23d7f5/header/1.jpg);background-position: left;">
             <div class="overlay op-3"></div>
             <div class="container">
                 <div class="col-md-10 offset-md-1">
                     <div class="header-text v1">
-                        <h1>Properties for Sale in Pakistan</h1>
+                        <h1>Properties for Sale in Bhakkar</h1>
                         <p class="header-text v2"><span></span></p>
                     </div>
                 </div>
@@ -288,20 +287,20 @@
         <div class="container mt-50">
             <div class="card">
                 <div class="card-body">
-                    <h2>Welcome to Zameenlo</h2>
-                    <p>Zameenlo is the fastest-growing company in Pakistan's online real estate sector, introducing
+                    <h2>Welcome to Zamenlo</h2>
+                    <p>Zamenlo is the fastest-growing company in Pakistan's online real estate sector, introducing
                         the most straightforward property search form to find homes, flats, apartments, houses for sale,
                         purchase, and rent. We only list properties
                         to buy, sell, or renting out after comprehensive verification, and are near the prevailing
                         market rates. We discourage fake listings and property listings demanding inflated prices. You
                         can select your preferred properties for
                         sale and rent with convenience in a clutter-free environment. Realistically, buying a home is a
-                        hard decision &#8212; We at Zameenlo help transform it into your safest, high yield
+                        hard decision &#8212; We at Zamenlo help transform it into your safest, high yield
                         investment real estate deals. We can also help
                         you with how to secure home financing and step by step property registration process.</p>
                     <br>
                     <p> We aim high to become the most authentic real estate portal to find a home in Pakistan's famous
-                        cities. Zameenlo&#174; is an award-winning, leading digital destination for the exciting and
+                        cities. Zamenlo&#174; is an award-winning, leading digital destination for the exciting and
                         optimistic content about the Pakistan
                         real estate market's current trends and future forecasts. We are becoming a hub of leading real
                         estate agencies operating from strategic locations spread throughout Pakistan, offering reliable
@@ -311,12 +310,12 @@
                         help of an expert in finding your perfect home,
                         house, flat, or apartment for sale.</p>
                     <br>
-                    <p>Zameenlo is an online property website that functions on mutual trust values, transparent and
+                    <p>Zamenlo is an online property website that functions on mutual trust values, transparent and
                         square deals. As a real estate digital platform, we offer a broad range of property listings. We
                         advise home buyers precisely from
                         the start of their property search until the deal gets finalized. You can find over 50,000
                         authentic property listings with accurate bedrooms, master beds, kitchens, bathrooms amenities,
-                        locality details, and real images. Zameenlo&#174;
+                        locality details, and real images. Zamenlo&#174;
                         prides itself on having the most iconic residential properties, knowing the history behind these
                         properties and a desire to transfer that knowledgebase to our valued clients. </p>
                 </div>
@@ -343,12 +342,12 @@
                                 <p style="display:inline-block"><img src="assets/img/logo.png"
                                         style="width: 50px; height: 50px;margin-bottom: 10px;margin-right: 5px;"
                                         alt="logo" class="img-fluid">
-                                    <h3 style="color:white;padding-top: 15px; display: inline-block;">Zameen Lo</h3>
+                                    <h3 style="color:white;padding-top: 15px; display: inline-block;">Zamen Lo</h3>
                                 </p>
                             </a>
                             <div class="company-desc">
                                 <h3>
-                                    ZameenLo.glitch.me - Pakistan's best free property listings website.
+                                    ZamenLo.glitch.me - Pakistan's best free property listings website.
                                     <span> Trusted place to investing, renting, buying &amp; selling online. </span>
                                 </h3>
                                 <div class="footer-social-wrap">
@@ -405,7 +404,7 @@
                                         <i class="fa fa-envelope" aria-hidden="true"></i>
                                     </div>
                                     <div class="text"><a href="#"><span class="__cf_email__"
-                                              >zameenlo@gmail.com</span></a>
+                                              >Zamenlo@gmail.com</span></a>
                                     </div>
                                 </li>
                                 <li class="contact-info">
@@ -425,7 +424,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-8 offset-md-2">
                         <p>
-                            &copy;Zameenlo 2023. All rights reserved. </p>
+                            &copy;Zamenlo 2023. All rights reserved. </p>
                     </div>
                 </div>
             </div>
