--- a/views/panel/adminPanel/profile.ejs
+++ b/views/panel/adminPanel/profile.ejs
@@ -16,7 +16,7 @@
 <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
-        <a class="navbar-brand ps-3" href="#">Zameenlo</a>
+        <a class="navbar-brand ps-3" href="#">Zamenlo</a>
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
@@ -198,7 +198,7 @@
               <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid px-4">
                     <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; ZameenLo admin 2023</div>
+                        <div class="text-muted">Copyright &copy; ZamenLo admin 2023</div>
                         <div>
                             <a href="#">Privacy Policy</a>
                             &middot;
