--- a/views/panel/auth/login.ejs
+++ b/views/panel/auth/login.ejs
@@ -54,7 +54,7 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; zameenlo 2023</div>
+                            <div class="text-muted">Copyright &copy; Zamenlo 2023</div>
                             <div>
                                 <a href="#">Privacy Policy</a>
                                 &middot;
