--- a/views/website/viewProperty.ejs
+++ b/views/website/viewProperty.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zameen Lo</title>
+    <title>Zamen Lo</title>
     <link href="/assets/css-compress/7a81152952ef25f1ea636813d80a0405.css?v=1664524241" rel="stylesheet">
     <link type="image/png" rel="icon" href="/assets/img/logo.png">
     <style>
@@ -138,7 +138,7 @@
                                     <p style="display:inline-block"><img src="/assets/img/logo.png"
                                             style="width: 50px; height: 50px;margin-bottom: 10px;margin-right: 5px;"
                                             alt="logo" class="img-fluid">
-                                        <h3 class="remove-logo" style="color:green;padding-top: 15px; display: inline-block;">Zameen Lo</h3>
+                                        <h3 class="remove-logo" style="color:green;padding-top: 15px; display: inline-block;">Zamen Lo</h3>
                                     </p>
                                 </a>
                             </div>
@@ -425,12 +425,12 @@
                                 <p style="display:inline-block"><img src="assets/img/logo.png"
                                         style="width: 50px; height: 50px;margin-bottom: 10px;margin-right: 5px;"
                                         alt="logo" class="img-fluid">
-                                    <h3 style="color:white;padding-top: 15px; display: inline-block;">Zameen Lo</h3>
+                                    <h3 style="color:white;padding-top: 15px; display: inline-block;">Zamen Lo</h3>
                                 </p>
                             </a>
                             <div class="company-desc">
                                 <h3>
-                                    ZameenLo.glitch.me - Pakistan's best free property listings website.
+                                    ZamenLo.glitch.me - Pakistan's best free property listings website.
                                     <span> Trusted place to investing, renting, buying &amp; selling online. </span>
                                 </h3>
                                 <div class="footer-social-wrap">
@@ -471,7 +471,7 @@
                                         <i class="fa fa-envelope" aria-hidden="true"></i>
                                     </div>
                                     <div class="text"><a href="#"><span class="__cf_email__"
-                                              >zameenlo@gmail.com</span></a>
+                                              >Zamenlo@gmail.com</span></a>
                                     </div>
                                 </li>
                                 <li class="contact-info">
@@ -491,7 +491,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-8 offset-md-2">
                         <p>
-                            &copy;Zameenlo 2023. All rights reserved. </p>
+                            &copy;Zamenlo 2023. All rights reserved. </p>
                     </div>
                 </div>
             </div>
